Keyboard Shortcuts + Sundry fixes
Updated Keyboard shortcuts:
- Full screen, to F11
- Delete to "Delete"
- Show display settings to "D"

Also:
- Showing toolbar before focusing it for Ctrl+T
- Tooltips inclue keyboard shortcuts
- Updated FAQ to include keyboard shortcuts

Fixes:
- Hamburger focus rect was black, should be white
- Blurry on single line titles in article list improved
- Fixed crash using context menu button on keyboard

--- a/App/css/default.css
+++ b/App/css/default.css
@@ -411,11 +411,10 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
     display: inline;
     font-size: 14px;
     font-weight: bolder;
-    padding-top: 4px;
+    padding-top: 6px;
     left: 4px;
-    top: -1px; /* Make it feel like it's got more bottom spaceing */
     line-height: 26px;
-    border-bottom-width: 4px;
+    border-bottom-width: 6px;
     border-bottom-style: solid;
 }
 
